Adding some final unit tests for proposal notifications