@@ -44,7 +44,8 @@ public class EntityNameProviderTest {
       UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:hive,SampleTable,PROD)");
   private static final Urn TEST_DATA_PLATFORM_URN = UrnUtils.getUrn("urn:li:dataPlatform:hive");
   private static final Urn TEST_OWNERSHIP_TYPE_URN = UrnUtils.getUrn("urn:li:ownershipType:test");
-  private static final Urn TEST_STRUCTURED_PROPERTY_URN = UrnUtils.getUrn("urn:li:structuredProperty:test");
+  private static final Urn TEST_STRUCTURED_PROPERTY_URN =
+      UrnUtils.getUrn("urn:li:structuredProperty:test");
 
   private SystemEntityClient entityClient;
   private Authentication systemAuthentication;
@@ -130,17 +131,17 @@ public class EntityNameProviderTest {
   public void testGetStructuredPropertyNameExists() {
     try {
       Mockito.when(
-                      entityClient.batchGetV2(
-                              any(OperationContext.class),
-                              Mockito.eq(STRUCTURED_PROPERTY_ENTITY_NAME),
-                              Mockito.eq(Set.of(TEST_STRUCTURED_PROPERTY_URN)),
-                              Mockito.eq(ImmutableSet.of(STRUCTURED_PROPERTY_DEFINITION_ASPECT_NAME))))
-              .thenReturn(
-                      Map.of(
-                              TEST_STRUCTURED_PROPERTY_URN,
-                              getMockStructuredPropertyResponse("Expected Structured Property Name")));
+              entityClient.batchGetV2(
+                  any(OperationContext.class),
+                  Mockito.eq(STRUCTURED_PROPERTY_ENTITY_NAME),
+                  Mockito.eq(Set.of(TEST_STRUCTURED_PROPERTY_URN)),
+                  Mockito.eq(ImmutableSet.of(STRUCTURED_PROPERTY_DEFINITION_ASPECT_NAME))))
+          .thenReturn(
+              Map.of(
+                  TEST_STRUCTURED_PROPERTY_URN,
+                  getMockStructuredPropertyResponse("Expected Structured Property Name")));
       String name =
-              entityNameProvider.getName(mock(OperationContext.class), TEST_STRUCTURED_PROPERTY_URN);
+          entityNameProvider.getName(mock(OperationContext.class), TEST_STRUCTURED_PROPERTY_URN);
       Assert.assertEquals(name, "Expected Structured Property Name");
     } catch (Exception e) {
       Assert.fail("Exception should not be thrown", e);
@@ -315,15 +316,17 @@ public class EntityNameProviderTest {
 
   private EntityResponse getMockStructuredPropertyResponse(String name) {
     return new EntityResponse()
-            .setEntityName(STRUCTURED_PROPERTY_ENTITY_NAME)
-            .setUrn(TEST_STRUCTURED_PROPERTY_URN)
-            .setAspects(
-                    new EnvelopedAspectMap(
-                            ImmutableMap.of(
-                                    STRUCTURED_PROPERTY_DEFINITION_ASPECT_NAME,
-                                    new EnvelopedAspect()
-                                            .setName(STRUCTURED_PROPERTY_DEFINITION_ASPECT_NAME)
-                                            .setValue(new Aspect(new StructuredPropertyDefinition().setDisplayName(name).data())))));
+        .setEntityName(STRUCTURED_PROPERTY_ENTITY_NAME)
+        .setUrn(TEST_STRUCTURED_PROPERTY_URN)
+        .setAspects(
+            new EnvelopedAspectMap(
+                ImmutableMap.of(
+                    STRUCTURED_PROPERTY_DEFINITION_ASPECT_NAME,
+                    new EnvelopedAspect()
+                        .setName(STRUCTURED_PROPERTY_DEFINITION_ASPECT_NAME)
+                        .setValue(
+                            new Aspect(
+                                new StructuredPropertyDefinition().setDisplayName(name).data())))));
   }
 
   private EntityResponse getMockSubTypesResponse(String name) {
